Doing doing doings

--- a/.env_example
+++ b/.env_example
@@ -3,3 +3,9 @@ DB_PORT=3309
 DB_NAME=test
 DB_USER=root
 DB_PASS=password
+
+SMTP_HOST=hostname
+SMTP_USERNAME=username
+SMTP_PASSWORD=password
+SMTP_USER_MAIL=username@hostname.com
+SMTP_USER_NICKNAME=hostnamebot
