--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "larapack/dd": "^1.1",
         "vlucas/phpdotenv": "^5.6",
-        "laminas/laminas-db": "^2.19"
+        "laminas/laminas-db": "^2.19",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
