--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ SMTP_USERNAME=username
 SMTP_PASSWORD=password
 SMTP_USER_MAIL=username@hostname.com
 SMTP_USER_NICKNAME=hostnamebot
+
+BASE_URL=hostname
