--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "vlucas/phpdotenv": "^5.6",
         "laminas/laminas-db": "^2.19",
         "phpmailer/phpmailer": "^6.9",
-        "nesbot/carbon": "^3.2"
+        "nesbot/carbon": "^3.2",
+        "bacon/bacon-qr-code": "^3.0"
     }
 }
