--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
     "name": "godly/simplemvc",
+    "description": "Simple MVC framework",
+    "license": "MIT",
+    "type": "project",
+    "version": "2.6.6",
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "App/"
         }
     },
     "require": {
