--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "App/"
-        }
+        },
+        "files": [
+            "App/Helpers/Functions.php"
+        ]
     },
     "require": {
         "larapack/dd": "^1.1",
